Device+OTN renderer tests 7.1 w/ intermediate rate
- add functional tests to perform device and OTN renderer service path.
- include ODUC2 (ODUC3, ODUC4), OTUC2 (OTUC3, OTUC4) and Ethernet
- even if not needed, update legacy test_utils.service_path_request
  method to support modulation formats used here different from dp-qpsk
- force old draft-bierman02 RESTCONF API use in tox.ini 7.1 tests:
  with RFC8040 URLs, some new tests return a HTTP code 503 (service
  unavailable) instead of expected code 409 (conflict).
  TODO: investigate this problem

JIRA: TRNSPRTPCE-528 TRNSPRTPCE-595
Change-Id: I56d33746f6283d5ca23199c0968ee04c15da8299
Co-authored-by: guillaume.lambert <guillaume.lambert@orange.com>
Signed-off-by: guillaume.lambert <guillaume.lambert@orange.com>

--- a/tox.ini
+++ b/tox.ini
@@ -148,7 +148,7 @@ whitelist_externals = launch_tests.sh
 passenv = LAUNCHER USE_LIGHTY USE_ODL_RESTCONF_VERSION
 setenv =
 #    USE_LIGHTY=True
-#    USE_ODL_RESTCONF_VERSION=draft-bierman02
+    USE_ODL_RESTCONF_VERSION=draft-bierman02
     USE_ODL_ALT_KARAF_ENV=./karaf71.env
     USE_ODL_ALT_KARAF_INSTALL_DIR=karaf71
 commands =
