Update GNPy functional test
- use a python package retrieved from Orange opensource GitLab repo
  instead of a docker image to launch the GNPy REST server
- update test code accordingly and move it to the PCE test suite
- update tox.ini accordingly

JIRA: TRNSPRTPCE-571
Signed-off-by: guillaume.lambert <guillaume.lambert@orange.com>
Change-Id: I605d2cc56c088f8213dda577d46fe4c43cbb3cfd

--- a/tox.ini
+++ b/tox.ini
@@ -57,6 +57,14 @@ commands =
 
 [testenv:testsPCE]
 depends = buildcontroller
+#the following lines retrieve unofficial package of GNPy with REST support from Orange opensource Gitlab repo
+setenv =
+  PIP_EXTRA_INDEX_URL = https://gitlab.com/api/v4/projects/33090323/packages/pypi/simple
+deps =
+  -r{toxinidir}/tests/requirements.txt
+  -r{toxinidir}/tests/test-requirements.txt
+  setuptools>=7.0
+  gnpy4tpce
 whitelist_externals = launch_tests.sh
 passenv = LAUNCHER USE_LIGHTY USE_ODL_RESTCONF_VERSION
 #setenv =
@@ -170,17 +178,6 @@ setenv =
 commands =
 #  nosetests --with-xunit transportpce_tests/hybrid/test01_device_change_notifications.py
   ./launch_tests.sh hybrid {posargs:}
-
-[testenv:gnpy]
-depends = buildcontroller
-whitelist_externals = launch_tests.sh
-                      dockercmd.sh
-passenv = LAUNCHER USE_LIGHTY USE_ODL_RESTCONF_VERSION
-commands =
-  #sudo docker pull atriki/gnpyrest:v1.2
-  ./dockercmd.sh run -d -p 8008:5000 --name gnpy_tpce_rest1 atriki/gnpyrest:v1.2
-  ./launch_tests.sh with_docker gnpy
-  ./dockercmd.sh container rm -f gnpy_tpce_rest1
 
 [testenv:nbinotifications]
 depends = buildcontroller,sims221
