New API for GNPy
- add new yang files of the api
- update the code
- remove node identification by IP address

JIRA: TRNSPRTPCE-513
Change-Id: I530323561cb3640b7082d4b5e2f22e782b2057b2
Signed-off-by: Ahmed Triki <ahmed.triki@orange.com>

--- a/tox.ini
+++ b/tox.ini
@@ -64,9 +64,10 @@ deps =
   -r{toxinidir}/tests/requirements.txt
   -r{toxinidir}/tests/test-requirements.txt
   setuptools>=7.0
-  gnpy4tpce==1.2.1
+  gnpy4tpce==2.4.2
 whitelist_externals = launch_tests.sh
 passenv = LAUNCHER USE_LIGHTY USE_ODL_RESTCONF_VERSION
+basepython=3.8
 #setenv =
 #    USE_LIGHTY=True
 commands =
