--- a/common/pom.xml
+++ b/common/pom.xml
@@ -30,6 +30,10 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <kafka.version>2.6.0</kafka.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -50,6 +54,11 @@
         <dependency>
             <groupId>org.opendaylight.netconf</groupId>
             <artifactId>sal-netconf-connector</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>${kafka.version}</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.mdsal</groupId>
