Adding Kafka messages for OFC22
- Add kafka messages in various places.
- Add kafka.properties file to configure kafka broker details.
- Made import ordering and other changes to satisfy StyleChecker.
- Added kafka messaging bypass when bootstrap.servers=SKIP in kafka.properties file.

Change-Id: Idfa3cf857c637cc557499a68dae1182aaa1223c5
Signed-off-by: Nathan Ellsworth <nathan@ellsworthzoo.com>

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -30,6 +30,10 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+  <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <kafka.version>3.0.0</kafka.version>
+  </properties>
 
   <dependencies>
     <dependency>
@@ -123,6 +127,11 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
+    </dependency>
+    <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>${kafka.version}</version>
     </dependency>
 
     <!-- Testing dependencies -->
