Tox testsPCE multiple python version support
GNPy requires python version >= 3.8
Currently tox configuration imposes version~=3.8.X
But python 3.9.X and 3.10.X should also be supported.

JIRA: TRNSPRTPCE-513
Signed-off-by: guillaume.lambert <guillaume.lambert@orange.com>
Change-Id: I233b9aa84700f50098baf3c7661cc3a4bc1b4b0f

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 minversion = 3.7.0
-envlist = buildcontroller,testsPCE,
+envlist = buildcontroller,
+    py38-testsPCE,
     sims121,build_karaf_tests121,tests121,
     sims221,build_karaf_tests221,tests221,
     sims71,build_karaf_tests71,tests71,
@@ -55,7 +56,7 @@ depends = buildcontroller
 commands =
   ./install_honeynode.sh 7.1
 
-[testenv:testsPCE]
+[testenv:{py38,py39,py310}-testsPCE]
 depends = buildcontroller
 #the following lines retrieve unofficial package of GNPy with REST support from Orange opensource Gitlab repo
 setenv =
@@ -67,7 +68,7 @@ deps =
   gnpy4tpce==2.4.3
 whitelist_externals = launch_tests.sh
 passenv = LAUNCHER USE_LIGHTY USE_ODL_RESTCONF_VERSION
-basepython = python3.8
+#basepython = python3.8
 #setenv =
 #    USE_LIGHTY=True
 commands =
