Use sphinx keep-going option in docs tox jobs
Without this option, sphinx stops at the first warning found
when -W option is enabled.
This prevents users from troubleshooting their contributions in 1 pass.

Signed-off-by: guillaume.lambert <guillaume.lambert@orange.com>
Change-Id: I20b4abd81704157377f3bfa27a9c65aac5f7f52d

--- a/tox.ini
+++ b/tox.ini
@@ -199,7 +199,7 @@ passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
 basepython = python3
 deps = -rdocs/requirements.txt
 commands =
-    sphinx-build -q -W -b html -n -d {envtmpdir}/doctrees ../docs/ {toxinidir}/docs/_build/html
+    sphinx-build -q -W --keep-going -b html -n -d {envtmpdir}/doctrees ../docs/ {toxinidir}/docs/_build/html
 
 [testenv:docs-linkcheck]
 passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
@@ -223,7 +223,7 @@ deps =
     -rdocs/requirements.txt
     sphinxcontrib-spelling
     PyEnchant
-commands = sphinx-build -b spelling  -d {envtmpdir}/doctrees ../docs/ {toxinidir}/docs/_build/spelling
+commands = sphinx-build -b spelling -d {envtmpdir}/doctrees ../docs/ {toxinidir}/docs/_build/spelling
 
 [testenv:autopep8]
 basepython = python3
