Quick and dirty fix to sulfur build problems in CI
Signed-off-by: guillaume.lambert <guillaume.lambert@orange.com>
Change-Id: I211fbd6389f48af9e2656811e6d6a0f529dc12f2

--- a/features/odl-transportpce/pom.xml
+++ b/features/odl-transportpce/pom.xml
@@ -97,7 +97,13 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
     </dependency>
     <dependency>
       <groupId>org.opendaylight.netconf</groupId>
-      <artifactId>odl-restconf</artifactId>
+      <artifactId>odl-restconf-all</artifactId>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.netconf</groupId>
+      <artifactId>odl-restconf-nb-bierman02</artifactId>
       <classifier>features</classifier>
       <type>xml</type>
     </dependency>
