Add perltidy to pre-commit linters
Signed-off-by: guillaume.lambert <guillaume.lambert@orange.com>
Change-Id: Ie20eb4bc885383deb304363eb8053f8161b3ada1

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,3 +28,8 @@ repos:
       - id: autopep8
         args: ['--in-place', '--max-line-length=120']
 
+  - repo: https://github.com/perltidy/perltidy
+    rev: '20240202.05'
+    hooks:
+      - id: perltidy
+        stages: [commit]
