Add perltidy to pre-commit linters
Signed-off-by: guillaume.lambert <guillaume.lambert@orange.com>
Change-Id: Ie20eb4bc885383deb304363eb8053f8161b3ada1

--- a/tox.ini
+++ b/tox.ini
@@ -403,7 +403,14 @@ commands =
 basepython = python3
 deps = pre-commit
 passenv = HOME
+allowlist_externals = sh
+                      cpan
+                      sudo
+                      which
 commands =
+    sh -c 'which cpan || sudo yum install -y perl-CPAN  \
+        || (echo "cpan command not found - please install it \
+             (e.g. sudo apt-get install perl-modules | yum install perl-CPAN )" >&2 && exit 1)'
     pre-commit run --all-files --show-diff-on-failure
     pre-commit run gitlint-ci --hook-stage manual
 
