--- a/features/odl-transportpce-inventory/pom.xml
+++ b/features/odl-transportpce-inventory/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>org.opendaylight.odlparent</groupId>
     <artifactId>single-feature-parent</artifactId>
-    <version>12.0.10</version>
+    <version>12.0.11</version>
     <relativePath/>
   </parent>
 
@@ -20,9 +20,9 @@
   <name>OpenDaylight :: transportpce :: Inventory</name>
 
   <properties>
-    <mdsal.version>11.0.15</mdsal.version>
-    <netconf.version>5.0.9</netconf.version>
-    <transportpce.models.version>18.3.1</transportpce.models.version>
+    <mdsal.version>11.0.16</mdsal.version>
+    <netconf.version>5.0.10</netconf.version>
+    <transportpce.models.version>18.4.0-SNAPSHOT</transportpce.models.version>
     <transportpce.db.host>localhost:3306</transportpce.db.host>
     <transportpce.db.database>transportpce</transportpce.db.database>
     <transportpce.db.username>root</transportpce.db.username>
