--- a/features/odl-transportpce/pom.xml
+++ b/features/odl-transportpce/pom.xml
@@ -12,7 +12,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
   <parent>
     <groupId>org.opendaylight.odlparent</groupId>
     <artifactId>single-feature-parent</artifactId>
-    <version>12.0.10</version>
+    <version>12.0.11</version>
     <relativePath/>
   </parent>
 
@@ -23,8 +23,8 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
   <name>OpenDaylight :: transportpce</name>
 
   <properties>
-    <netconf.version>5.0.9</netconf.version>
-    <transportpce.models.version>18.3.1</transportpce.models.version>
+    <netconf.version>5.0.10</netconf.version>
+    <transportpce.models.version>18.4.0-SNAPSHOT</transportpce.models.version>
     <configfile.directory>etc/opendaylight/karaf</configfile.directory>
     <skip.karaf.featureTest>false</skip.karaf.featureTest>
   </properties>
