--- a/lighty/pom.xml
+++ b/lighty/pom.xml
@@ -25,7 +25,7 @@
     <application.attach.zip>true</application.attach.zip>
     <maven.deploy.skip>true</maven.deploy.skip>
     <transportpce.version>7.4.0-SNAPSHOT</transportpce.version>
-    <transportpce.models.version>18.3.1</transportpce.models.version>
+    <transportpce.models.version>18.4.0-SNAPSHOT</transportpce.models.version>
   </properties>
 
   <dependencyManagement>
