--- a/pce/pom.xml
+++ b/pce/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.opendaylight.mdsal</groupId>
     <artifactId>binding-parent</artifactId>
-    <version>11.0.15</version>
+    <version>11.0.16</version>
     <relativePath/>
   </parent>
 
@@ -24,7 +24,7 @@
   <packaging>bundle</packaging>
 
   <properties>
-    <transportpce.models.version>18.3.1</transportpce.models.version>
+    <transportpce.models.version>18.4.0-SNAPSHOT</transportpce.models.version>
   </properties>
 
   <dependencyManagement>
@@ -39,7 +39,7 @@
       <dependency>
         <groupId>org.opendaylight.mdsal</groupId>
         <artifactId>mdsal-artifacts</artifactId>
-        <version>11.0.15</version>
+        <version>11.0.16</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
